# rp2040-hostap-i2c

./: .gitignore  CMakeLists.txt  README.md
config/: app_config.h  lwipopts.h
docs/: ElectricalStateSensing_Flowchart.md  EnvironmentalMonitoring_Flowchart.md  PowerDistribution_Flowchart.md  PowerDistribution_Integration_Notes.md  SystemControl_Telemetry_Flowchart.md  System_Overview_Flowchart.md  W4_FlowChartTemplate.pptx
src/: FreeRTOSConfig.h  main.c
src/drivers/: bme280.c  bme280.h  ina238.c  ina238.h
src/tasks/: sensor_task.c  sensor_task.h  webserver_task.c  webserver_task.h  wifi_task.c  wifi_task.h
src/web/: fsdata.c
